@@ -17,6 +17,12 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+November 7th, 2014 M. Verderi
+- G4VBiasingOperation : suppression of DenyProcessPostStepDoIt(...)
+  as redondant and special case of ApplyFinalStateBiasing(...).
+  tag : proc-biasmng-V10-00-00 
+
+
 November 22nd, 2013  A.Howard
 - Moved G4VProcessPlacer and G4ProcessPlacer from importance
 
